# code_g7

./: control.py  formal_file.py  formal_file_v2.py  pynput_test.py  pyproject.toml  test_control_keyboard.py  v1.ipynb  v1.py  v2.py  v3.py  v4.py
